--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rocc</title>
 </head>
+
 <body>
-    
+    <header>
+        <div id="rectangle">
+            <nav>
+                <ul>
+                    <li>Better</li>
+                    <li>Shop</li>
+                    <li>Substription</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div id="banner">
+            <img id="mainphoto" src="assets/images/f4548b4d68f7318402d541d12db944a8.jpeg">
+            <img id="logo" src="assets/images/image1.png">
+            <h1>Natural + Sustainable Oral Care</h1>
+        </div>
+    </main>
 </body>
+
 </html>
