--- a/index.html
+++ b/index.html
@@ -6,19 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rocc</title>
+    <style>
+        
+        #rectangle {
+            display: flex;
+            background-color:  #526E3E;
+        }
+        .mainmenu {
+            border: solid black;
+            display: flex;
+            list-style-type: none;
+            flex-direction: row;
+            
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <div id="rectangle">
-            <nav>
-                <ul>
+            <ul class="mainmenu">
                     <li>Better</li>
                     <li>Shop</li>
                     <li>Substription</li>
                     <li>Contact</li>
-                </ul>
-            </nav>
+            </ul>
         </div>
     </header>
     <main>
