--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <style>
         .header {
             display: flex;
-            background-color:  #526E3E;
+            background-color: #526E3E;
         }
+
         .header .menu ul {
             display: flex;
             list-style: none;
         }
+
         .header .menu ul li {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-style: Regular;
@@ -26,27 +28,42 @@
             color: #FFFFFF;
             margin: 20px;
         }
-        
+
+        .main {
+            display: flex;
+            background-image: url(assets/images/f4548b4d68f7318402d541d12db944a8.jpeg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 100%;
+            height: 100%;
+            flex-flow: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .main div {
+            color: #FFFFFF;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-style: Bold;
+            font-size: 57px;
+        }
     </style>
 </head>
 
 <body>
     <header class="header">
-            <nav class="menu">
+        <nav class="menu">
             <ul>
-                    <li>Better</li>
-                    <li>Shop</li>
-                    <li>Substription</li>
-                    <li>Contact</li>
+                <li>Better</li>
+                <li>Shop</li>
+                <li>Substription</li>
+                <li>Contact</li>
             </ul>
         </nav>
     </header>
-    <main>
-        <div id="banner">
-            <img id="mainphoto" src="assets/images/f4548b4d68f7318402d541d12db944a8.jpeg">
-            <img id="logo" src="assets/images/image1.png">
-            <h1>Natural + Sustainable Oral Care</h1>
-        </div>
+    <main class="main">
+            <img src="assets/images/image1.png">
+            <div>Natural + Sustainable Oral Care</div>
     </main>
 </body>
 
